Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103218

[REG 6.3.0->6.3.1] qt3d examples not compiling on iOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.3.1
    • 6.3.1
    • Qt3D
    • macOS10.15, macOS11
    • iOS/tvOS/watchOS

    Description

      Install Qt6.3.1 snapshot iOS binaries, and try to compile any of the Qt3D examples from command line, configure passes:

      /Users/qt/RTA/Qt_6.3.1/6.3.1/ios/bin/qt-cmake -S /Users/qt/RTA/Qt_6.3.1/Examples/Qt-6.3.1/qt3d/planets-qml -B /Users/qt/RTA/Qt_6.3.1/Examples/Qt-6.3.1/qt3d/planets-qml/bld_ios -GNinja
      

      But when compiling with

      cmake --build . --parallel in /Users/qt/RTA/Qt_6.3.1/Examples/Qt-6.3.1/qt3d/planets-qml/bld_ios

      fails:

      duplicate symbol 'Qt3DRender::Debug::CommandExecuter::executeCommand(QList<QString> const&)' in:
          /Users/qt/RTA/Qt_6.3.1/6.3.1/ios/./plugins/renderers/libopenglrenderer.a(commandexecuter.cpp.o)
          /Users/qt/RTA/Qt_6.3.1/6.3.1/ios/./plugins/renderers/librhirenderer.a(commandexecuter.cpp.o)
      ld: 1 duplicate symbol for architecture arm64
      clang: error: linker command failed with exit code 1 (use -v to see invocation)
      ninja: build stopped: subcommand failed
      

      Attachments

        For Gerrit Dashboard: QTBUG-103218
        # Subject Branch Project Status CR V

        Activity

          People

            mkrus Mike Krus
            joaijala Johanna Äijälä
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes