Move RHI command executer to separate namespace

Clashes with same class in GL plugin when using static builds (iOS).
I have no idea why it wasn't a problem before...

Task-number: QTBUG-103218
Change-Id: I4437c39fc2269c8e7461ca1ab5dc7a0284135cd1
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>
(cherry picked from commit c08b0234f0e7df0e28de969dcd1c4494fe2de3b8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>